# Nek5000

./: .gitmodules  CMakeLists.txt
core/: mksizefile.cmake  mkuserfile.cmake  nek_interface.f  nek_interface.h
